# astal-rs

./: .gitmodules  Cargo.toml  README.md
astal-template-sys/: Gir.toml  build.rs
astal-template-sys/tests/: abi.rs  constant.c  layout.c
crates/astal/: Cargo.toml  Gir.toml
crates/astal-apps/: Cargo.toml  Gir.toml
crates/astal-apps/src/: lib.rs
crates/astal-apps/src/auto/: application.rs  apps.rs  mod.rs  score.rs  versions.txt
crates/astal-auth/: Cargo.toml  Gir.toml
crates/astal-auth/src/: lib.rs
crates/astal-auth/src/auto/: mod.rs  pam.rs  versions.txt
crates/astal-battery/: Cargo.toml  Gir.toml
crates/astal-battery/src/: lib.rs
crates/astal-battery/src/auto/: device.rs  enums.rs  history_data_point.rs  iu_power_device.rs  mod.rs  statistics_data_point.rs  upower.rs  versions.txt
crates/astal-bluetooth/: Cargo.toml  Gir.toml
crates/astal-bluetooth/src/: lib.rs
crates/astal-bluetooth/src/auto/: adapter.rs  bluetooth.rs  device.rs  mod.rs  versions.txt
crates/astal-hyprland/: Cargo.toml  Gir.toml
crates/astal-hyprland/src/: lib.rs
crates/astal-hyprland/src/auto/: bind.rs  client.rs  enums.rs  flags.rs  hyprland.rs  mod.rs  monitor.rs  position.rs  versions.txt  workspace.rs
crates/astal-io/: Cargo.toml  Gir.toml
crates/astal-io/astal-io-sys/: Cargo.toml  Gir.toml
crates/astal-io/astal-io-sys/tests/: abi.rs
crates/astal-io/src/: lib.rs
crates/astal-io/src/auto/: application.rs  constants.rs  daemon.rs  enums.rs  functions.rs  mod.rs  process.rs  time.rs  variable.rs  variable_base.rs  versions.txt
crates/astal-mpris/: Cargo.toml  Gir.toml
crates/astal-mpris/src/: lib.rs
crates/astal-mpris/src/auto/: enums.rs  mod.rs  mpris.rs  player.rs
crates/astal-notifd/: Cargo.toml  Gir.toml
crates/astal-notifd/src/: lib.rs
crates/astal-notifd/src/auto/: action.rs  enums.rs  mod.rs  notifd.rs  notification.rs
crates/astal-power-profiles/: Cargo.toml  Gir.toml
crates/astal-power-profiles/src/: lib.rs
crates/astal-power-profiles/src/auto/: hold.rs  mod.rs  power_profiles.rs  profile.rs
crates/astal-river/: Cargo.toml  Gir.toml
crates/astal-river/src/: lib.rs
crates/astal-river/src/auto/: mod.rs  output.rs  river.rs
crates/astal-tray/: Cargo.toml  Gir.toml
crates/astal-tray/src/: lib.rs
crates/astal-tray/src/auto/: enums.rs  mod.rs  pixmap.rs  tooltip.rs  tray.rs  tray_item.rs  versions.txt
crates/astal-wp/: Cargo.toml  Gir.toml
crates/astal-wp/src/: lib.rs
crates/astal-wp/src/auto/: audio.rs  device.rs  endpoint.rs  enums.rs  mod.rs  profile.rs  versions.txt  video.rs  wp.rs
crates/astal/astal-sys/: Cargo.toml  Gir.toml
crates/astal/astal-sys/tests/: layout.c
crates/astal/src/: lib.rs
crates/astal/src/auto/: application.rs  box_.rs  button.rs  center_box.rs  circular_progress.rs  click_event.rs  constants.rs  enums.rs  event_box.rs  flags.rs  functions.rs  hover_event.rs  icon.rs  label.rs  level_bar.rs  mod.rs  motion_event.rs  overlay.rs  scroll_event.rs  scrollable.rs  slider.rs  stack.rs  versions.txt  window.rs
crates/gir-error/: Cargo.toml
crates/gir-error/src/: lib.rs
crates/gnyperland/: Cargo.toml
crates/gnyperland/src/: main.rs
crates/gnyprland/: Cargo.toml
crates/gnyprland/src/: main.rs
scripts/: generate.nu  notbound.nu
sys/astal-apps-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-apps-sys/src/: lib.rs
sys/astal-apps-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-auth-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-auth-sys/src/: lib.rs
sys/astal-auth-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-battery-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-battery-sys/src/: lib.rs
sys/astal-battery-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-bluetooth-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-bluetooth-sys/src/: lib.rs
sys/astal-bluetooth-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-hyprland-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-hyprland-sys/src/: lib.rs
sys/astal-hyprland-sys/tests/: abi.rs  constant.c  layout.c  manual.h
sys/astal-io-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-io-sys/src/: lib.rs
sys/astal-io-sys/tests/: abi.rs  constant.c  layout.c  manual.h
sys/astal-mpris-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-mpris-sys/src/: lib.rs
sys/astal-mpris-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-notifd-sys/: Cargo.toml  Gir.toml
sys/astal-notifd-sys/src/: lib.rs
sys/astal-notifd-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-power-profiles-sys/: Cargo.toml  Gir.toml
sys/astal-power-profiles-sys/src/: lib.rs
sys/astal-power-profiles-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-river-sys/: Cargo.toml  Gir.toml
sys/astal-river-sys/src/: lib.rs
sys/astal-river-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-sys/: Cargo.toml  Gir.toml  build.rs
sys/astal-sys/src/: lib.rs
sys/astal-sys/src/auto/: versions.txt
sys/astal-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-tray-sys/: Cargo.toml  Gir.toml
sys/astal-tray-sys/src/: lib.rs
sys/astal-tray-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-wireplumber-sys/: Gir.toml
sys/astal-wireplumber-sys/src/: lib.rs
sys/astal-wireplumber-sys/tests/: abi.rs  constant.c  layout.c
sys/astal-wp-sys/: Cargo.toml  build.rs
sys/astal-wp-sys/src/: lib.rs
sys/astal-wp-sys/tests/: abi.rs  constant.c  layout.c
sys/nm-sys/: Cargo.toml  Gir.toml
sys/nm-sys/src/: lib.rs
sys/nm-sys/tests/: abi.rs  constant.c  layout.c
