[package]
name = "astal-io"
version = "0.1.0"
edition = "2021"

[dependencies.astal-io-sys]
workspace = true

[dependencies.gir-error]
workspace = true

[dependencies.gtk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
