[package]
name = "astal"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
bitflags = "2.2"

[dependencies.ffi]
package = "astal-sys"
path = "astal-sys"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
