[package]
name = "astal"
version = "0.1.0"
edition = "2021"

[dependencies.astal-sys]
workspace = true

[dependencies.gir-error]
workspace = true

[dependencies.gtk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.atk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.astal-io]
path = "../astal-io"

[features]
default = ["gtk_v3", "gio_v2_80", "v3_14"]
v2_32 = []
v3_10 = ["v2_32"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
gio_v2_28 = []
gio_v2_32 = ["gio_v2_28"]
gio_v2_80 = ["gio_v2_32"]
gtk_v2_4 = []
gtk_v2_6 = ["gtk_v2_4"]
gtk_v2_10 = ["gtk_v2_6"]
gtk_v2_12 = ["gtk_v2_10"]
gtk_v2_14 = ["gtk_v2_12"]
gtk_v2_16 = ["gtk_v2_14"]
gtk_v2_18 = ["gtk_v2_16"]
gtk_v2_20 = ["gtk_v2_18"]
gtk_v2_24 = ["gtk_v2_20"]
gtk_v3_4 = ["gtk_v2_24"]
gtk_v3_6 = ["gtk_v3_4"]
gtk_v3_8 = ["gtk_v3_6"]
gtk_v3_10 = ["gtk_v3_8"]
gtk_v3_12 = ["gtk_v3_10"]
gtk_v3_14 = ["gtk_v3_12"]
gtk_v3_16 = ["gtk_v3_14"]
gtk_v3_20 = ["gtk_v3_16"]
gtk_v3_22 = ["gtk_v3_20"]
gtk_v3 = ["gtk_v3_22"]
