[package]
name = "gnyprland"
version = "0.1.0"
edition = "2021"
default-run = "gnyprland"

[dependencies.astal]
path = "../astal"

[dependencies.astal-io]
path = "../astal-io"

[dependencies.gtk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
git = "https://github.com/onlycs/gtk3-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
