[package]
name = "astal-battery-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.astal_battery]
name = "astal-battery"
version = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "astal_battery_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
