[package]
name = "astal-io-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.astal_io]
name = "astal-io"
version = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "astal_io_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
