[package]
name = "astal-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.astal]
name = "astal"
version = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "astal_sys"

[dependencies]
libc = "0.2"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
